2006-08-24	1.54	And again!
2006-08-23      1.53    Doh!  How we loaded location data was buggy
2006-08-23      1.52    Documentation patches;
                        Corrected CHANGELOG entry for v1.51;
                        Added location data for the UK
2006-08-22      1.51    Updated UK data to access DATA filehandle directly,
                          which depends on DBM::Deep 0.97 and above.  This
                          saves even more memory and makes the module load
                          a lot faster;
                        New UK allocations;
                        Some improvements and fixes in OFCOM data parser;
                        Bug fixes :-( for UK numbers with a significant F digit
2005-10-16      1.5     UK data moved into an embedded DBM::Deep structure
                          to save memory (NB: this adds dependencies)
                        Added location() method
2005-10-11      1.4004  New UK allocations
                        Removed 'use warnings' and 'use diagnostics' because
                          they pointlessly require a later version of perl;
                        re the above, tests now all use -w instead
2005-08-23      1.4003  Updated N::P::Country to use CS instead of YU for
                          Yugoslavia (ISO 3166 has been updated)
                        Fixed non-US and non-CA countries in N::P::Country's
                          phone2country_and_idd function (BUGFIX)
                        New UK allocations
2005-08-02      1.4002  New UK allocations
2005-06-27      1.4001  Added phone2country_and_idd to N::P::Country
                        new UK allocations etc
2005-05-18      1.4     updated Number::Phone::Country to remove American
                          Samoa's +684 code, it has migrated to +1 684 in
                          the NANP
                        N::P::C now correctly identifies US numbers
                          doesn't just assume a NANP number is US if it's