@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Number-Phone
-version:      1.54
+version:      1.55
 version_from: 
 installdirs:  site
 requires:
@@ -9,4 +9,4 @@ requires:
     Scalar::Util:                  0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: ExtUtils::MakeMaker version 6.30
