@@ -1,7 +1,7 @@
 use ExtUtils::MakeMaker;
 WriteMakefile(
 		NAME         => 'Number::Phone',
-		VERSION      => 1.54,
+		VERSION      => 1.55,
 		PREREQ_PM    => {
 			'Scalar::Util'	=> 0,
                         'DBM::Deep'	=> 0.97, # need to pass DATA filehandle
