@@ -1,3 +1,4 @@
+2006-08-25      1.55    Damnit, 1.54's ...UK->location() was wrong
 2006-08-24	1.54	And again!
 2006-08-23      1.53    Doh!  How we loaded location data was buggy
 2006-08-23      1.52    Documentation patches;
